# humble-hero

./: .gitignore  index.html  package-lock.json  package.json  railway.toml  vercel.json  vite.config.js
.github/workflows/: declare-winner.yml
api/: declare-winner.js
contract/humble-hero-program/: Anchor.toml  Cargo.toml
contract/humble-hero-program/programs/humble-hero-program/: Cargo.toml
contract/humble-hero-program/programs/humble-hero-program/src/: lib.rs
contract/humble-hero-program/tests/: humble-hero-program.ts
scripts/: Declarewinnersonce.js  declareWinners.js  declareWinnersOnce.js  declarewinnersonce.js
src/: App.css  App.jsx  index.css
src/components/: Dashboard.jsx  Docs.jsx  GamePlay.jsx  GameResults.jsx  Header.jsx  Leaderboard.jsx  Lobby.jsx  Matchmaking.jsx  OnboardingTour.jsx  WalletProvider.jsx  WinShareCard.jsx
src/hooks/: useTheme.jsx
src/idl/: humble_hero.json
src/lib/: blockchain.js  gameEngine.js  solana.js  supabase.js
supabase/: config.toml
supabase/functions/declare-winner/: index.ts
